Fixed button spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -183,6 +183,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .song-edit-buttons > button {
     display: inline;
+    margin: 0 1px;
 }
 
 #new-song-button, #new-song-form * {
